--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ main {
     height: 100px;
 }
 
-img {
-    /* border: solid; */
-}
+/* img {
+    border: solid;
+} */
 
 .nav-wrapper {
     width: 100%;
