--- a/style.css
+++ b/style.css
@@ -24,14 +24,36 @@ body {
 }
 
 #settings {
-    /* background-color: #ee6e73; */
+background-color: white;
     height: 200px;
-    border: solid;
+    /* border: solid; */
 }
 
 #contact {
     height: 100px;
     background-color: #dcdcdc;
+}
+
+@media only screen and (max-width: 400px) {
+    body {
+        width: 100%;
+        height: auto;
+    }
+    img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 2148px ) {
+    body {
+        width: 100%;
+        height: auto;
+    }
+    img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 /* img {
