--- a/style.css
+++ b/style.css
@@ -43,6 +43,17 @@ background-color: white;
         width: 100%;
         height: auto;
     }
+    button {
+        width: 100%;
+        height: auto;
+        font-size: 10px; 
+    }
+
+    #btn-duet {
+        font-size: 10px !important;
+    }
+
+
 }
 
 @media only screen and (max-width: 2148px ) {
