--- a/style.css
+++ b/style.css
@@ -26,8 +26,7 @@ body {
 #settings {
     background-color: white;
     height: 200px;
-    padding-top: 10px;
-    
+    padding-top: 10px;  
 }
 
 #contact {
@@ -91,3 +90,68 @@ footer {
     background-color: #ee6e73;
     padding-top: 10px;
 }
+
+/* radio button section*/
+
+.radio-container {
+    display: inline;
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 16px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+  
+  /* Create a custom radio button */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color:#eee;
+    border-radius: 100%;
+  }
+  
+  /* On mouse-over, add a pink background color */
+  .radio-container:hover input ~ .checkmark {
+    background-color: #ee6e73;
+  }
+  
+  /* When the radio button is checked, add a pink background */
+  .radio-container input:checked ~ .checkmark {
+    background-color: #ee6e73;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .radio-container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  /* .radio-container .checkmark:after {
+       top: 9px;
+      left: 9px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: white;
+  } */
